--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# A rust game library that I use to render the visuals,
+# and get user inputs.
 macroquad = "0.3.25"
+
+# A simple game library that I made.
 xf = { path = "../../../Libs/Xf/xf" }
