--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# A rust game library that I use to render the visuals,
+# Helpful utilities.
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = "1.0"
+enum-utils = "0.1.2"
+
+# A rust game library that I use to render the visuals
 # and get user inputs.
 macroquad = "0.3.25"
 
