--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 enum-utils = "0.1.2"
+lazy_static = "1.4.0"
 
 # A rust game library that I use to render the visuals
 # and get user inputs.
